--- a/index.html
+++ b/index.html
@@ -16,52 +16,59 @@
     </header>
 
     <main>
+        <!-- HERO SECTION -->
         <div class="hero">
             <h2>Walz Shop</h2>
             <p>Solusi top up game tercepat, termurah, dan terpercaya!</p>
         </div>
 
-        <div class="main-content">
-            <section class="section promo-section">
-                <div class="slider-container">
-                    <div id="promo-slider" class="slider-track"></div>
-                    <div class="slider-dots" id="slider-dots"></div>
+        <!-- PROMO SLIDER SECTION -->
+        <section class="section promo-section">
+            <div class="slider-container">
+                <div id="promo-slider" class="slider-track">
+                    <img src="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" alt="Promo 1">
+                    <img src="https://i.supaimg.com/3272ce04-c4a0-4025-8d8a-b2723a2f2267.jpg" alt="Promo 2">
+                    <img src="https://i.supaimg.com/872628e9-c5f6-46f5-b5cc-8c8f3e8766c7.jpg" alt="Promo 3">
                 </div>
-            </section>
+                <div class="slider-dots" id="slider-dots"></div>
+            </div>
+        </section>
 
-            <section class="section game-list-section">
-                <h2>Pilih Game</h2>
-                <div class="game-grid" id="games-grid"></div>
-            </section>
+        <!-- GAME LIST SECTION -->
+        <section class="section game-list-section">
+            <h2>Pilih Game</h2>
+            <div class="game-grid" id="games-grid"></div>
+        </section>
 
-            <section class="section info-section" id="cara-topup">
-                <h2>Cara Top Up</h2>
-                <div class="card">
-                    <ol>
-                        <li>Pilih game favorit Anda di halaman utama.</li>
-                        <li>Masukkan User ID dan Server ID (jika diperlukan).</li>
-                        <li>Pilih nominal top up dan metode pembayaran yang Anda inginkan.</li>
-                        <li>Klik "Beli Sekarang" dan lakukan pembayaran.</li>
-                        <li>Setelah membayar, konfirmasi ke Admin untuk diproses.</li>
-                    </ol>
+        <!-- CARA TOP UP SECTION -->
+        <section class="section info-section" id="cara-topup">
+            <h2>Cara Top Up</h2>
+            <div class="card">
+                <ol>
+                    <li>Pilih game favorit Anda di halaman utama.</li>
+                    <li>Masukkan User ID dan Server ID (jika diperlukan).</li>
+                    <li>Pilih nominal top up dan metode pembayaran yang Anda inginkan.</li>
+                    <li>Klik "Beli Sekarang" dan lakukan pembayaran.</li>
+                    <li>Setelah membayar, konfirmasi ke Admin untuk diproses.</li>
+                </ol>
+            </div>
+        </section>
+
+        <!-- CONTACT SECTION -->
+        <section class="section info-section" id="kontak">
+            <h2>Kontak Kami</h2>
+            <div class="card contact-card">
+                <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran Anda.</p>
+                <div class="contact-buttons">
+                    <a href="https://wa.me/6282298902274" class="btn btn-primary" target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
+                    </a>
+                    <a href="mailto:walzlonely@gmail.com" class="btn btn-secondary" target="_blank">
+                        <i class="fa-solid fa-envelope"></i> Email
+                    </a>
                 </div>
-            </section>
-
-            <section class="section info-section" id="kontak">
-                <h2>Kontak Kami</h2>
-                <div class="card contact-card">
-                    <p>Hubungi Admin untuk bantuan dan konfirmasi pembayaran Anda.</p>
-                    <div class="contact-buttons">
-                        <a href="https://wa.me/6282298902274" class="btn btn-primary" target="_blank">
-                            <i class="fa-brands fa-whatsapp"></i> Chat via WhatsApp
-                        </a>
-                        <a href="mailto:walzlonely@gmail.com" class="btn btn-secondary" target="_blank">
-                            <i class="fa-solid fa-envelope"></i> Email
-                        </a>
-                    </div>
-                </div>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
