--- a/index.html
+++ b/index.html
@@ -87,5 +87,11 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            renderGameGrid();
+            renderPromoSlider();
+        });
+    </script>
 </body>
 </html>
