--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <header class="ws-header">
         <div class="ws-header-row">
-            <h1>Walz Shop</h1>
+            <h1><a href="index.html" class="logo">Walz Shop</a></h1>
+            <nav class="ws-nav">
+                <a href="#game-list-section">Top Up</a>
+                <a href="#cara-topup">Cara Top Up</a>
+                <a href="#kontak">Kontak</a>
+            </nav>
         </div>
     </header>
 
