--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            renderGameGrid();
-            renderPromoSlider();
+            renderGameGrid('game.html?game='); // Ubah di sini
+            renderPromoSlider('game.html?game='); // Dan di sini
         });
     </script>
 </body>
