--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Mobile Legends</title>
+    <title id="page-title">Walz Shop</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -14,9 +14,9 @@
         <div class="ws-header-row">
             <h1><a href="index.html" class="logo">Walz Shop</a></h1>
             <nav class="ws-nav">
-                <a href="#game-list-section">Top Up</a>
-                <a href="#cara-topup">Cara Top Up</a>
-                <a href="#kontak">Kontak</a>
+                <a href="index.html#game-list-section">Top Up</a>
+                <a href="index.html#cara-topup">Cara Top Up</a>
+                <a href="index.html#kontak">Kontak</a>
             </nav>
         </div>
     </header>
@@ -27,14 +27,14 @@
         </a>
         
         <div class="game-banner-container">
-            <img id="game-banner" src="https://i.supaimg.com/3272ce04-c4a0-4025-8d8a-b2723a2f2267.jpg" alt="Mobile Legends Banner">
+            <img id="game-banner" src="" alt="">
         </div>
 
         <div class="grid-container">
             <div class="left-panel">
                 <section class="form-section">
                     <h3>Langkah 1: Masukkan User ID</h3>
-                    <p class="muted">Temukan User ID dan Server ID di bawah nama panggilan saat Anda mengklik avatar profil.</p>
+                    <p class="muted"></p>
                     <div class="input-group">
                         <input type="text" id="user-id" placeholder="Masukkan User ID">
                         <span class="status-text error" id="error-user"></span>
@@ -95,7 +95,6 @@
     
     <script src="script.js"></script>
     <script>
-        const currentPageGameKey = "mobile-legends";
         document.addEventListener("DOMContentLoaded", () => {
             setupGamePage();
             setupEventListeners();
