--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <main class="main-content">
         <section class="hero-section" id="home">
             <div class="hero-content">
-                <h2>Top Up Game Favoritmu, Sekarang Juga!</h2>
-                <p>Proses instan, aman, dan harga dijamin paling murah. Nikmati pengalaman top up terbaik hanya di Walz Shop!</p>
+                <h2>Top Up Game</h2>
                 <a href="#games" class="btn btn-primary btn-cta">Mulai Top Up</a>
             </div>
         </section>
