--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walz Shop - Jasa Top Up Game Termurah & Tercepat</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://files.catbox.moe/k3hly0.jpg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body id="home-page">
 
     <header class="ws-header">
-        <div class="ws-header-row">
+        <div class="ws-header-row container">
             <h1 class="logo">Walz Shop</h1>
             <nav class="ws-nav">
                 <a href="#home">Home</a>
@@ -28,15 +28,6 @@
             <div class="hero-content">
                 <h2>Top Up Game</h2>
                 <a href="#games" class="btn btn-primary btn-cta">Mulai Top Up</a>
-            </div>
-        </section>
-
-        <section class="promo-section">
-            <div class="container">
-                <div class="promo-slider" id="promo-slider-container">
-                    <div class="slider__track" id="promo-slider"></div>
-                    <div class="slider__dots" id="slider-dots"></div>
-                </div>
             </div>
         </section>
 
