--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walz Shop - Top Up Termurah, Aman, & Terpercaya</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://files.catbox.moe/k3hly0.jpg" type="image/x-icon">
 </head>
@@ -45,15 +46,28 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-info">
+            <div class="footer-col">
                 <h3>Walz Shop</h3>
-                <p>Top Up Game & Pulsa Termurah, Aman & Terpercaya</p>
+                <p>"Top Up Game & Pulsa Termurah, Aman & Terpercaya"</p>
             </div>
-            <div class="social-media">
-                <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <div class="footer-col">
+                <h3>Hubungi Kami</h3>
+                <p>Bantuan CS (24/7):</p>
+                <p>
+                    <i class="fab fa-whatsapp"></i> <a href="https://wa.me/6282298902274" target="_blank">WhatsApp Admin</a>
+                </p>
+                <p>
+                    <i class="fas fa-envelope"></i> <a href="mailto:walzlonely@gmail.com">walzlonely@gmail.com</a>
+                </p>
             </div>
+            <div class="footer-col">
+                <h3>Ikuti Kami</h3>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i> Facebook</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Walz Shop. All rights reserved.</p>
         </div>
     </footer>
     
