--- a/game.html
+++ b/game.html
@@ -16,10 +16,12 @@
             <a href="index.html" class="logo">
                 <img src="https://files.catbox.moe/k3hly0.jpg" alt="Walz Shop Logo" class="logo-img">
             </a>
+            <a href="index.html" class="btn btn-back">
+                <i class="fas fa-arrow-left"></i> Kembali
+            </a>
             <div class="header-buttons">
-                <a href="index.html" class="btn btn-back">
-                    <i class="fas fa-arrow-left"></i> Kembali
-                </a>
+                <a href="#" class="btn btn-download"><i class="fas fa-download"></i> Unduh Aplikasi</a>
+                <a href="#" class="btn btn-login"><i class="fas fa-user-circle"></i> Login</a>
             </div>
             <div class="menu-toggle"><i class="fas fa-bars"></i></div>
         </div>
